/**
 * Clase principal con el método main.
 */
public class Main {

    /**
     * Ejecuta el método run de una instancia de Menu.
     * @param args No se necesitan.
     */
    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.run();
    }

}
